// Copyright 2020 The Meerkat Authors
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package meerkat.schema2.proto;
option go_package = "schemapb";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";


message DatabaseDesc {
  bytes                     id      = 1 ;
  string                    name    = 2 ;
  string                    desc    = 3 ;
  google.protobuf.Timestamp created = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}


message TableDesc {
  bytes                     id              = 1 ;
  bytes                     database_id     = 2 ;
  string                    name            = 3 ;
  uint32                    numOfPartitions = 4 ;
  string                    desc            = 5 ;
  google.protobuf.Timestamp created         = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated         = 7 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message ColumnDesc{
    bytes                     id            = 1 ;
    bytes                     table_id      = 2 ;
    string                    name          = 3 ;
    string                    desc          = 4 ;
    DataType                  data_type     = 5 ;
    bool                      nullable      = 6 ;
    bool                      indexed       = 7 ;
    bool                      fullText      = 8 ;
    google.protobuf.Timestamp created       = 9  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    google.protobuf.Timestamp updated       = 10 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

enum DataType{
    INT32         = 0;
    INT64         = 1;
    BOOL          = 2;
    FLOAT64       = 3;
    DECIMAL       = 4;
    STRING        = 5;
    DATETIME      = 6;
    DATETIME_NANO = 7;
    UUID          = 8;
}


message PartitionAllocDesc{
  repeated MemberList       allocMap  = 1 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp created   = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated   = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message MemberList{
    repeated string members = 1 ;
}


